# dungeon-maestro

./: .gitignore  DungeonMaestro.md  dungeon-maestro.session.json  dungeon-maestro.yaml  pyproject.toml  requirements.txt  tabletop-dj.session.json  tabletop-dj.yaml  tmp_phase2_verify.py
benchmarks/: README.md  transcription-scenarios.example.json
desktop/: index.html  package-lock.json  package.json  vite.config.mjs
desktop/electron/: config.cjs  discord.cjs  main.cjs  preload.cjs  preview.cjs  sidecar.cjs  state.cjs  validation.cjs  windows.cjs
desktop/src/: App.jsx  constants.js  libraryEditor.js  playbackProgress.js  styles.css
desktop/src/components/: AddSoundscapesToCollectionModal.jsx  CollectionPickerModal.jsx  ContextMenu.jsx  ControlRail.jsx  CreateCollectionModal.jsx  DashboardWindow.jsx  FeedWorkspace.jsx  LibraryWorkspace.jsx  LiveWorkspace.jsx  PinnedHud.jsx  PlaybackController.jsx
desktop/src/styles/: base.css  dashboard-collections.css  dashboard-library.css  dashboard-live.css  dashboard-menu.css  dashboard-playback.css  dashboard-shell.css  dashboard.css  hud.css  index.css
src/dungeon_maestro_sidecar/: __init__.py  audio.py  benchmark_transcription.py  cli.py  config.py  discord_bot.py  discord_discovery.py  matching.py  models.py  persistence.py  playback.py  ring_buffer.py  runtime.py  session.py  sidecar_server.py  track_preview.py  tracks.py  transcription.py  vad.py
src/dungeon_maestro_sidecar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
